# coldfusion-language-server

./: Cargo.toml  package.json  rescript.json
client/src/: Extension.res
crates/coldfusion-language-server/: Cargo.toml
crates/coldfusion-language-server/src/: lib.rs  main.rs  server.rs
crates/coldfusion-ls/: Cargo.toml
crates/coldfusion-ls/src/: main.rs
crates/coldfusion-ls/src/config/: mod.rs
crates/coldfusion-ls/src/dispatcher/: mod.rs
crates/coldfusion-ls/src/global_state/: from_proto.rs  line_index.rs  mem_docs.rs  mod.rs
crates/coldfusion-ls/src/handlers/: mod.rs  notifications.rs  request.rs
crates/coldfusion-ls/src/lsp/: mod.rs
crates/completion/: Cargo.toml
crates/completion/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/virtual-file-storage/: Cargo.toml
crates/virtual-file-storage/src/: lib.rs  virtualfs_path.rs
crates/virtual-fs/: Cargo.toml
crates/virtual-fs/src/: anchored_path.rs  file_id.rs  lib.rs  path_interner.rs  virtualfs_path.rs
server/src/: Log.res  Server.res
src/: README.org  main.rs
src/server/: mod.rs
