[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ['The ColdFusion Language Server Team']
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
coldfusion-language-server = { path = "crates/coldfusion-language-server" }
completion = { path = "crates/completion" }
