[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ['The ColdFusion Language Server Team']
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
coldfusion-ls = { path = "crates/coldfusion-ls" }
virtual-fs = { path = "crates/virtual-fs" }
paths = { path = "crates/paths" }
