[package]
name = "coldfusion-language-server"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coldfusion-language-server"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"]}
lsp-server = "0.7.6"
lsp-types = "0.95.0"
completion = { path = "../completion" }
