[package]
name = "virtual-fs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.2.5"
rustc-hash = "1.1.0"


paths.workspace = true
